@@ -207,6 +207,7 @@ All:
 - added wxMicroSleep() and wxMilliSleep() replacing deprecated wxUsleep()
 - basic UDP sockets support (Lenny Maiorani)
 - fixed wxDateTime::GetWeekDayName() for some dates (Daniel Kaps)
+- support for comma in contrib gizmo wxLEDNumberCtrl (Grant Likely)
 
 All (GUI):
 
